--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/trace-decoder"]
 	path = src/trace-decoder
-	url = git@github.com:sifive/trace-decoder.git
+	url = git@github.com:xuanhoa9985/freedom-trace-decoder.git
 [submodule "src/binutils-metal"]
 	path = src/binutils-metal
 	url = git@github.com:sifive/freedom-binutils-metal.git
